init day 13 step 7 complete